# apps/api/src/main/java/com/merine/rebuild/system/menu/persistence/MenuMapper.java
@@ -40,6 +40,7 @@ public interface MenuMapper {
                 @Param("type") String type,
                 @Param("name") String name,
                 @Param("routeKey") String routeKey,
+                @Param("iconName") String iconName,
                 @Param("permissionId") Long permissionId,
                 @Param("sortOrder") int sortOrder,
                 @Param("status") String status,
@@ -49,6 +50,7 @@ public interface MenuMapper {
                     @Param("parentId") Long parentId,
                     @Param("name") String name,
                     @Param("routeKey") String routeKey,
+                    @Param("iconName") String iconName,
                     @Param("sortOrder") int sortOrder,
                     @Param("status") String status,
                     @Param("description") String description,
